[package]
name = "Sudoku"
version = "0.1.0"
authors = ["Tyler Wickline <twick00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.34.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.68.0"